{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 385,
  "lineage": "eab1bbc6-76e0-cd6c-bda2-f01f85632ef2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:762595429056:transit-gateway/tgw-0123c66bb5c0de5df",
            "association_default_route_table_id": "tgw-rtb-0fb5fc3b8a8556bdd",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for AWS and On-Premise VPC connectivity",
            "dns_support": "enable",
            "id": "tgw-0123c66bb5c0de5df",
            "owner_id": "762595429056",
            "propagation_default_route_table_id": "tgw-rtb-0fb5fc3b8a8556bdd",
            "tags": {
              "Name": "tgw-aws-onpremise"
            },
            "tags_all": {
              "Name": "tgw-aws-onpremise"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-00ba35f00c30b47ab",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-09856767ead5877ff"
            ],
            "tags": {
              "Name": "tgw-attachment-aws-vpc"
            },
            "tags_all": {
              "Name": "tgw-attachment-aws-vpc"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0123c66bb5c0de5df",
            "vpc_id": "vpc-0c738b6a7cb65c9f8",
            "vpc_owner_id": "762595429056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "onpremise_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b1848fd2fde09aa8",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-092f0d1278f0e8a99"
            ],
            "tags": {
              "Name": "tgw-attachment-onpremise-vpc"
            },
            "tags_all": {
              "Name": "tgw-attachment-onpremise-vpc"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0123c66bb5c0de5df",
            "vpc_id": "vpc-09a530b5dd2bfccf9",
            "vpc_owner_id": "762595429056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-instance-windows-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f73246b6299f4858",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-0f09258f81938f1e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMInstanceProfile",
            "id": "i-0f09258f81938f1e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c16e867dde4547c8",
            "private_dns": "ip-10-10-1-55.ec2.internal",
            "private_ip": "10.10.1.55",
            "public_dns": "ec2-34-235-161-194.compute-1.amazonaws.com",
            "public_ip": "34.235.161.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c40cad17c615a5a7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cac42fe884b54f4e",
            "tags": {
              "Name": "dev-instance-windows-terraform-aws"
            },
            "tags_all": {
              "Name": "dev-instance-windows-terraform-aws"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02451e3a1241fd765"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.terraform-public-facing-db-sg-aws",
            "aws_subnet.terraform-public-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-instance-windows-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f73246b6299f4858",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-08b7b1edfa7dbdcfa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b7b1edfa7dbdcfa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-051e2490aea8535b0",
            "private_dns": "ip-172-16-2-159.ec2.internal",
            "private_ip": "172.16.2.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04745f4c11e1c5868",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092f0d1278f0e8a99",
            "tags": {
              "Name": "dev-instance-windows-terraform-onpremise"
            },
            "tags_all": {
              "Name": "dev-instance-windows-terraform-onpremise"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052b73534e9558075"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-db-sg-onpremise",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-default-igw-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:internet-gateway/igw-016aba15227e7d601",
            "id": "igw-016aba15227e7d601",
            "owner_id": "762595429056",
            "tags": {
              "Name": "terraform-igw-aws"
            },
            "tags_all": {
              "Name": "terraform-igw-aws"
            },
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-default-igw-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:internet-gateway/igw-0b5b7515b713c33f5",
            "id": "igw-0b5b7515b713c33f5",
            "owner_id": "762595429056",
            "tags": {
              "Name": "terraform-igw-onpremise"
            },
            "tags_all": {
              "Name": "terraform-igw-onpremise"
            },
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-route-table-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-07a0dc9703f50cea7",
            "id": "rtb-07a0dc9703f50cea7",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0123c66bb5c0de5df",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-route-table-aws"
            },
            "tags_all": {
              "Name": "terraform-private-route-table-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-route-table-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-039e7b17af5448eae",
            "id": "rtb-039e7b17af5448eae",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0123c66bb5c0de5df",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-route-table-onpremise"
            },
            "tags_all": {
              "Name": "terraform-private-route-table-onpremise"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-0cc1cf39fe5a7ba36",
            "id": "rtb-0cc1cf39fe5a7ba36",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016aba15227e7d601",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0123c66bb5c0de5df",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-route-table-aws"
            },
            "tags_all": {
              "Name": "terraform-public-route-table-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_internet_gateway.terraform-default-igw-aws",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-08529e1f1f3d5283d",
            "id": "rtb-08529e1f1f3d5283d",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0123c66bb5c0de5df",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-route-table-onpremise"
            },
            "tags_all": {
              "Name": "terraform-public-route-table-onpremise"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-rt-association-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b9d97faf17ea99",
            "route_table_id": "rtb-07a0dc9703f50cea7",
            "subnet_id": "subnet-09856767ead5877ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_route_table.terraform-private-route-table-aws",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-rt-association-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0079465cee4ce12",
            "route_table_id": "rtb-039e7b17af5448eae",
            "subnet_id": "subnet-092f0d1278f0e8a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_route_table.terraform-private-route-table-onpremise",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rt-association-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf01bc6dd3c45ead",
            "route_table_id": "rtb-0cc1cf39fe5a7ba36",
            "subnet_id": "subnet-0cac42fe884b54f4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_internet_gateway.terraform-default-igw-aws",
            "aws_route_table.terraform-public-route-table-aws",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_subnet.terraform-public-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rt-association-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d5a42fdab7fdee1",
            "route_table_id": "rtb-08529e1f1f3d5283d",
            "subnet_id": "subnet-0ea9dfbcc85c7d23b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_route_table.terraform-public-route-table-onpremise",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_subnet.terraform-public-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-db-sg-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-0dc48f09ad99cd0dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc48f09ad99cd0dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-facing-db-sg-aws",
            "name_prefix": "",
            "owner_id": "762595429056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-private-facing-db-sg-aws"
            },
            "tags_all": {
              "Name": "terraform-private-facing-db-sg-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-db-sg-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-052b73534e9558075",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052b73534e9558075",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow all traffic from aws VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-facing-db-sg-onpremise",
            "name_prefix": "",
            "owner_id": "762595429056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-private-facing-db-sg-onpremise"
            },
            "tags_all": {
              "Name": "terraform-private-facing-db-sg-onpremise"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-public-facing-db-sg-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-02451e3a1241fd765",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02451e3a1241fd765",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "Allow ICMP from aws public subnet",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "Allow RDP from aws public subnet",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow HTTPS from onpremise VPC for SSM",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "public-facing-db-sg-aws",
            "name_prefix": "",
            "owner_id": "762595429056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-public-facing-db-sg-aws"
            },
            "tags_all": {
              "Name": "terraform-public-facing-db-sg-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.terraform-public-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-public-facing-db-sg-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-0f8480af7254513a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8480af7254513a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-facing-db-sg-onpremise",
            "name_prefix": "",
            "owner_id": "762595429056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-public-facing-db-sg-onpremise"
            },
            "tags_all": {
              "Name": "terraform-public-facing-db-sg-onpremise"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-0266fe1683bb0e495",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0266fe1683bb0e495",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "172.16.0.0/16"
                ],
                "description": "Allow HTTPS from both VPCs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-09856767ead5877ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09856767ead5877ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-aws-A"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-aws-A"
            },
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-092f0d1278f0e8a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092f0d1278f0e8a99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-onpremise-B"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-onpremise-B"
            },
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0cac42fe884b54f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cac42fe884b54f4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet-aws-A"
            },
            "tags_all": {
              "Name": "terraform-public-subnet-aws-A"
            },
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0ea9dfbcc85c7d23b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9dfbcc85c7d23b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet-onpremise-B"
            },
            "tags_all": {
              "Name": "terraform-public-subnet-onpremise-B"
            },
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-default-vpc-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc/vpc-0c738b6a7cb65c9f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0fd3c588205972c5a",
            "default_route_table_id": "rtb-0e9f63612c3869db0",
            "default_security_group_id": "sg-0d872b90184a3d58a",
            "dhcp_options_id": "dopt-015d302a35bf5e9c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c738b6a7cb65c9f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9f63612c3869db0",
            "owner_id": "762595429056",
            "tags": {
              "Name": "learn-terraform-vpc-aws"
            },
            "tags_all": {
              "Name": "learn-terraform-vpc-aws"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-default-vpc-onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc/vpc-09a530b5dd2bfccf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ab7bb9634831c494",
            "default_route_table_id": "rtb-08e66a42fe57f5d70",
            "default_security_group_id": "sg-07ec1f7121bd6a9f6",
            "dhcp_options_id": "dopt-015d302a35bf5e9c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a530b5dd2bfccf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e66a42fe57f5d70",
            "owner_id": "762595429056",
            "tags": {
              "Name": "learn-terraform-vpc-onpremise"
            },
            "tags_all": {
              "Name": "learn-terraform-vpc-onpremise"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc-endpoint/vpce-07cbf8a044fdc598b",
            "dns_entry": [
              {
                "dns_name": "vpce-07cbf8a044fdc598b-3vbtnvda.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07cbf8a044fdc598b-3vbtnvda-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z050807736RYK0FAOWCHG"
              }
            ],
            "id": "vpce-07cbf8a044fdc598b",
            "network_interface_ids": [
              "eni-0bf78bb190e935479"
            ],
            "owner_id": "762595429056",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0266fe1683bb0e495"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-09856767ead5877ff"
            ],
            "tags": {
              "Name": "ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc-endpoint/vpce-0df6b9011b8a5f09d",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0df6b9011b8a5f09d",
            "owner_id": "762595429056",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-039e7b17af5448eae",
              "rtb-08529e1f1f3d5283d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint-onpremise"
            },
            "tags_all": {
              "Name": "s3-endpoint-onpremise"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09a530b5dd2bfccf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.aws_vpc",
            "aws_ec2_transit_gateway_vpc_attachment.onpremise_vpc",
            "aws_route_table.terraform-private-route-table-onpremise",
            "aws_route_table.terraform-public-route-table-onpremise",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_subnet.terraform-private-subnet-onpremise",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc-endpoint/vpce-0d3b35cf2b8cac6cd",
            "dns_entry": [
              {
                "dns_name": "vpce-0d3b35cf2b8cac6cd-u17ejumg.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d3b35cf2b8cac6cd-u17ejumg-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03198113G7DI3U2F4JOB"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z0314309650CP602M7L3"
              }
            ],
            "id": "vpce-0d3b35cf2b8cac6cd",
            "network_interface_ids": [
              "eni-051241d10a03979b8"
            ],
            "owner_id": "762595429056",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0266fe1683bb0e495"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-09856767ead5877ff"
            ],
            "tags": {
              "Name": "ssm-endpoint"
            },
            "tags_all": {
              "Name": "ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc-endpoint/vpce-0c54abf794ca1571d",
            "dns_entry": [
              {
                "dns_name": "vpce-0c54abf794ca1571d-0xzkp98b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c54abf794ca1571d-0xzkp98b-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z032391834LA3G5WM3D2K"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z03198093OZ4V8R6PT3LY"
              }
            ],
            "id": "vpce-0c54abf794ca1571d",
            "network_interface_ids": [
              "eni-01484e8bf092ef356"
            ],
            "owner_id": "762595429056",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0266fe1683bb0e495"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-09856767ead5877ff"
            ],
            "tags": {
              "Name": "ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c738b6a7cb65c9f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.terraform-private-subnet-aws",
            "aws_vpc.terraform-default-vpc-aws",
            "aws_vpc.terraform-default-vpc-onpremise"
          ]
        }
      ]
    }
  ]
}